src/tops/parser/ToPSParser.java
// $ANTLR 3.5 /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g 2013-08-17 19:19:07

package tops.parser;
import java.util.ArrayList;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

@SuppressWarnings("all")
public class ToPSParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ESC_SEQ", "EXPONENT", "FLOAT", 
		"HEX_DIGIT", "ID", "INT", "LINE_COMMENT", "OCTAL_ESC", "STRING", "UNICODE_ESC", 
		"WS", "'('", "')'", "':'", "';'", "'='", "'['", "']'", "'|'"
	};
	public static final int EOF=-1;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int ESC_SEQ=4;
	public static final int EXPONENT=5;
	public static final int FLOAT=6;
	public static final int HEX_DIGIT=7;
	public static final int ID=8;
	public static final int INT=9;
	public static final int LINE_COMMENT=10;
	public static final int OCTAL_ESC=11;
	public static final int STRING=12;
	public static final int UNICODE_ESC=13;
	public static final int WS=14;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public ToPSParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public ToPSParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return ToPSParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g"; }


	private ProbabilisticModelParameters parameters = new ProbabilisticModelParameters();
	private ProbabilisticModelParameterValue current_parameter;
	private ArrayList<String> strlst;
	private ArrayList<Double> dbllst;
	public ProbabilisticModelParameters getParameters() {
	  return parameters;
	}




	// $ANTLR start "model"
	// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:27:1: model : properties ;
	public final void model() throws RecognitionException {
		try {
			// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:27:7: ( properties )
			// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:27:9: properties
			{
			pushFollow(FOLLOW_properties_in_model40);
			properties();
			state._fsp--;
			if (state.failed) return;
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "model"



	// $ANTLR start "properties"
	// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:29:1: properties : ( property )+ ;
	public final void properties() throws RecognitionException {
		try {
			// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:30:2: ( ( property )+ )
			// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:30:4: ( property )+
			{
			// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:30:4: ( property )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==ID) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:30:4: property
					{
					pushFollow(FOLLOW_property_in_properties51);
					property();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					if (state.backtracking>0) {state.failed=true; return;}
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "properties"



	// $ANTLR start "property"
	// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:32:1: property : ID '=' value ;
	public final void property() throws RecognitionException {
		Token ID1=null;

		try {
			// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:32:9: ( ID '=' value )
			// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:32:11: ID '=' value
			{
			ID1=(Token)match(input,ID,FOLLOW_ID_in_property61); if (state.failed) return;
			match(input,19,FOLLOW_19_in_property63); if (state.failed) return;
			pushFollow(FOLLOW_value_in_property65);
			value();
			state._fsp--;
			if (state.failed) return;
			if ( state.backtracking==0 ) {parameters.add((ID1!=null?ID1.getText():null), current_parameter);}
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "property"



	// $ANTLR start "value"
	// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:34:1: value : ( STRING | INT | FLOAT | list_str | list_double | probability_map | conditional_probability_map | sub_model | ID );
	public final void value() throws RecognitionException {
		Token STRING2=null;
		Token INT3=null;
		Token FLOAT4=null;

		try {
			// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:34:7: ( STRING | INT | FLOAT | list_str | list_double | probability_map | conditional_probability_map | sub_model | ID )
			int alt2=9;
			switch ( input.LA(1) ) {
			case STRING:
				{
				alt2=1;
				}
				break;
			case INT:
				{
				alt2=2;
				}
				break;
			case FLOAT:
				{
				alt2=3;
				}
				break;
			case 15:
				{
				int LA2_4 = input.LA(2);
				if ( (LA2_4==STRING) ) {
					switch ( input.LA(3) ) {
					case 17:
						{
						alt2=6;
						}
						break;
					case 22:
						{
						alt2=7;
						}
						break;
					case STRING:
					case 16:
						{
						alt2=4;
						}
						break;
					default:
						if (state.backtracking>0) {state.failed=true; return;}
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 7, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}
				}
				else if ( (LA2_4==FLOAT||LA2_4==16) ) {
					alt2=5;
				}

				else {
					if (state.backtracking>0) {state.failed=true; return;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 4, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case 20:
				{
				alt2=8;
				}
				break;
			case ID:
				{
				alt2=9;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}
			switch (alt2) {
				case 1 :
					// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:34:9: STRING
					{
					STRING2=(Token)match(input,STRING,FOLLOW_STRING_in_value75); if (state.failed) return;
					if ( state.backtracking==0 ) {current_parameter = (new StringParameterValue((STRING2!=null?STRING2.getText():null))).removeQuotes(); }
					}
					break;
				case 2 :
					// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:35:4: INT
					{
					INT3=(Token)match(input,INT,FOLLOW_INT_in_value82); if (state.failed) return;
					if ( state.backtracking==0 ) {current_parameter = new IntParameterValue(Integer.parseInt((INT3!=null?INT3.getText():null)));}
					}
					break;
				case 3 :
					// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:36:4: FLOAT
					{
					FLOAT4=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_value89); if (state.failed) return;
					if ( state.backtracking==0 ) {current_parameter = new DoubleParameterValue(Double.parseDouble((FLOAT4!=null?FLOAT4.getText():null)));}
					}
					break;
				case 4 :
					// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:37:4: list_str
					{
					pushFollow(FOLLOW_list_str_in_value96);
					list_str();
					state._fsp--;
					if (state.failed) return;
					if ( state.backtracking==0 ) {current_parameter = new StringVectorParameterValue(strlst);}
					}
					break;
				case 5 :
					// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:38:4: list_double
					{
					pushFollow(FOLLOW_list_double_in_value103);
					list_double();
					state._fsp--;
					if (state.failed) return;
					if ( state.backtracking==0 ) { current_parameter = new DoubleVectorParameterValue(dbllst);}
					}
					break;
				case 6 :
					// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:39:4: probability_map
					{
					pushFollow(FOLLOW_probability_map_in_value110);
					probability_map();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 7 :
					// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:40:4: conditional_probability_map
					{
					pushFollow(FOLLOW_conditional_probability_map_in_value115);
					conditional_probability_map();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 8 :
					// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:41:4: sub_model
					{
					pushFollow(FOLLOW_sub_model_in_value120);
					sub_model();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 9 :
					// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:42:4: ID
					{
					match(input,ID,FOLLOW_ID_in_value125); if (state.failed) return;
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "value"



	// $ANTLR start "list_double"
	// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:45:1: list_double : '(' list_double_elements ')' ;
	public final void list_double() throws RecognitionException {
		try {
			// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:46:2: ( '(' list_double_elements ')' )
			// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:46:5: '(' list_double_elements ')'
			{
			match(input,15,FOLLOW_15_in_list_double139); if (state.failed) return;
			pushFollow(FOLLOW_list_double_elements_in_list_double141);
			list_double_elements();
			state._fsp--;
			if (state.failed) return;
			match(input,16,FOLLOW_16_in_list_double143); if (state.failed) return;
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "list_double"



	// $ANTLR start "list_double_elements"
	// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:48:1: list_double_elements : ( FLOAT | ( list_double_element )* );
	public final void list_double_elements() throws RecognitionException {
		Token FLOAT5=null;

		try {
			// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:49:2: ( FLOAT | ( list_double_element )* )
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==FLOAT) ) {
				int LA4_1 = input.LA(2);
				if ( (synpred10_ToPS()) ) {
					alt4=1;
				}
				else if ( (true) ) {
					alt4=2;
				}

			}
			else if ( (LA4_0==16) ) {
				alt4=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}

			switch (alt4) {
				case 1 :
					// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:49:4: FLOAT
					{
					FLOAT5=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_list_double_elements154); if (state.failed) return;
					if ( state.backtracking==0 ) {dbllst = new ArrayList<Double>(); dbllst.add(Double.parseDouble((FLOAT5!=null?FLOAT5.getText():null))); }
					}
					break;
				case 2 :
					// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:50:4: ( list_double_element )*
					{
					// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:50:4: ( list_double_element )*
					loop3:
					while (true) {
						int alt3=2;
						int LA3_0 = input.LA(1);
						if ( (LA3_0==FLOAT) ) {
							alt3=1;
						}

						switch (alt3) {
						case 1 :
							// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:50:4: list_double_element
							{
							pushFollow(FOLLOW_list_double_element_in_list_double_elements161);
							list_double_element();
							state._fsp--;
							if (state.failed) return;
							}
							break;

						default :
							break loop3;
						}
					}

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "list_double_elements"



	// $ANTLR start "list_double_element"
	// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:52:1: list_double_element : FLOAT ;
	public final void list_double_element() throws RecognitionException {
		Token FLOAT6=null;

		try {
			// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:53:2: ( FLOAT )
			// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:53:4: FLOAT
			{
			FLOAT6=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_list_double_element174); if (state.failed) return;
			if ( state.backtracking==0 ) {dbllst.add(Double.parseDouble((FLOAT6!=null?FLOAT6.getText():null)));}
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "list_double_element"



	// $ANTLR start "list_str"
	// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:56:1: list_str : '(' list_str_elements ')' ;
	public final void list_str() throws RecognitionException {
		try {
			// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:56:11: ( '(' list_str_elements ')' )
			// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:56:14: '(' list_str_elements ')'
			{
			match(input,15,FOLLOW_15_in_list_str190); if (state.failed) return;
			pushFollow(FOLLOW_list_str_elements_in_list_str192);
			list_str_elements();
			state._fsp--;
			if (state.failed) return;
			match(input,16,FOLLOW_16_in_list_str194); if (state.failed) return;
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "list_str"



	// $ANTLR start "list_str_elements"
	// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:58:1: list_str_elements : STRING ( list_str_element )* ;
	public final void list_str_elements() throws RecognitionException {
		Token STRING7=null;

		try {
			// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:58:19: ( STRING ( list_str_element )* )
			// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:58:21: STRING ( list_str_element )*
			{
			STRING7=(Token)match(input,STRING,FOLLOW_STRING_in_list_str_elements204); if (state.failed) return;
			if ( state.backtracking==0 ) {strlst = new ArrayList<String>(); strlst.add((STRING7!=null?STRING7.getText():null));}
			// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:58:90: ( list_str_element )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==STRING) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:58:90: list_str_element
					{
					pushFollow(FOLLOW_list_str_element_in_list_str_elements208);
					list_str_element();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					break loop5;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "list_str_elements"



	// $ANTLR start "list_str_element"
	// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:60:1: list_str_element : STRING ;
	public final void list_str_element() throws RecognitionException {
		Token STRING8=null;

		try {
			// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:61:2: ( STRING )
			// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:61:4: STRING
			{
			STRING8=(Token)match(input,STRING,FOLLOW_STRING_in_list_str_element220); if (state.failed) return;
			if ( state.backtracking==0 ) {strlst.add((STRING8!=null?STRING8.getText():null));}
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "list_str_element"



	// $ANTLR start "probability_map"
	// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:64:1: probability_map : '(' probabilities_list ')' ;
	public final void probability_map() throws RecognitionException {
		try {
			// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:64:17: ( '(' probabilities_list ')' )
			// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:64:19: '(' probabilities_list ')'
			{
			match(input,15,FOLLOW_15_in_probability_map232); if (state.failed) return;
			pushFollow(FOLLOW_probabilities_list_in_probability_map234);
			probabilities_list();
			state._fsp--;
			if (state.failed) return;
			match(input,16,FOLLOW_16_in_probability_map236); if (state.failed) return;
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "probability_map"



	// $ANTLR start "probabilities_list"
	// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:67:1: probabilities_list : ( ( probability ';' )+ | ( probability ';' )* probability );
	public final void probabilities_list() throws RecognitionException {
		try {
			// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:67:20: ( ( probability ';' )+ | ( probability ';' )* probability )
			int alt8=2;
			alt8 = dfa8.predict(input);
			switch (alt8) {
				case 1 :
					// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:67:22: ( probability ';' )+
					{
					// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:67:22: ( probability ';' )+
					int cnt6=0;
					loop6:
					while (true) {
						int alt6=2;
						int LA6_0 = input.LA(1);
						if ( (LA6_0==STRING) ) {
							alt6=1;
						}

						switch (alt6) {
						case 1 :
							// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:67:23: probability ';'
							{
							pushFollow(FOLLOW_probability_in_probabilities_list248);
							probability();
							state._fsp--;
							if (state.failed) return;
							match(input,18,FOLLOW_18_in_probabilities_list250); if (state.failed) return;
							}
							break;

						default :
							if ( cnt6 >= 1 ) break loop6;
							if (state.backtracking>0) {state.failed=true; return;}
							EarlyExitException eee = new EarlyExitException(6, input);
							throw eee;
						}
						cnt6++;
					}

					}
					break;
				case 2 :
					// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:68:8: ( probability ';' )* probability
					{
					// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:68:8: ( probability ';' )*
					loop7:
					while (true) {
						int alt7=2;
						int LA7_0 = input.LA(1);
						if ( (LA7_0==STRING) ) {
							int LA7_1 = input.LA(2);
							if ( (LA7_1==17) ) {
								int LA7_2 = input.LA(3);
								if ( (LA7_2==FLOAT||LA7_2==INT) ) {
									int LA7_3 = input.LA(4);
									if ( (LA7_3==18) ) {
										alt7=1;
									}

								}

							}

						}

						switch (alt7) {
						case 1 :
							// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:68:9: probability ';'
							{
							pushFollow(FOLLOW_probability_in_probabilities_list262);
							probability();
							state._fsp--;
							if (state.failed) return;
							match(input,18,FOLLOW_18_in_probabilities_list264); if (state.failed) return;
							}
							break;

						default :
							break loop7;
						}
					}

					pushFollow(FOLLOW_probability_in_probabilities_list268);
					probability();
					state._fsp--;
					if (state.failed) return;
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "probabilities_list"



	// $ANTLR start "probability"
	// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:70:1: probability : STRING ':' probability_number ;
	public final void probability() throws RecognitionException {
		try {
			// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:70:12: ( STRING ':' probability_number )
			// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:70:14: STRING ':' probability_number
			{
			match(input,STRING,FOLLOW_STRING_in_probability280); if (state.failed) return;
			match(input,17,FOLLOW_17_in_probability282); if (state.failed) return;
			pushFollow(FOLLOW_probability_number_in_probability284);
			probability_number();
			state._fsp--;
			if (state.failed) return;
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "probability"



	// $ANTLR start "conditional_probability_map"
	// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:72:1: conditional_probability_map : '(' conditional_probabilities_list ')' ;
	public final void conditional_probability_map() throws RecognitionException {
		try {
			// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:72:28: ( '(' conditional_probabilities_list ')' )
			// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:72:30: '(' conditional_probabilities_list ')'
			{
			match(input,15,FOLLOW_15_in_conditional_probability_map292); if (state.failed) return;
			pushFollow(FOLLOW_conditional_probabilities_list_in_conditional_probability_map294);
			conditional_probabilities_list();
			state._fsp--;
			if (state.failed) return;
			match(input,16,FOLLOW_16_in_conditional_probability_map296); if (state.failed) return;
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "conditional_probability_map"



	// $ANTLR start "conditional_probabilities_list"
	// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:75:1: conditional_probabilities_list : ( conditional_probability ';' )+ ( conditional_probability )? ;
	public final void conditional_probabilities_list() throws RecognitionException {
		try {
			// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:75:31: ( ( conditional_probability ';' )+ ( conditional_probability )? )
			// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:75:34: ( conditional_probability ';' )+ ( conditional_probability )?
			{
			// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:75:34: ( conditional_probability ';' )+
			int cnt9=0;
			loop9:
			while (true) {
				int alt9=2;
				int LA9_0 = input.LA(1);
				if ( (LA9_0==STRING) ) {
					int LA9_1 = input.LA(2);
					if ( (LA9_1==22) ) {
						int LA9_3 = input.LA(3);
						if ( (LA9_3==STRING) ) {
							int LA9_4 = input.LA(4);
							if ( (LA9_4==17) ) {
								int LA9_5 = input.LA(5);
								if ( (LA9_5==FLOAT||LA9_5==INT) ) {
									int LA9_6 = input.LA(6);
									if ( (LA9_6==18) ) {
										alt9=1;
									}

								}

							}

						}

					}

				}

				switch (alt9) {
				case 1 :
					// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:75:35: conditional_probability ';'
					{
					pushFollow(FOLLOW_conditional_probability_in_conditional_probabilities_list307);
					conditional_probability();
					state._fsp--;
					if (state.failed) return;
					match(input,18,FOLLOW_18_in_conditional_probabilities_list309); if (state.failed) return;
					}
					break;

				default :
					if ( cnt9 >= 1 ) break loop9;
					if (state.backtracking>0) {state.failed=true; return;}
					EarlyExitException eee = new EarlyExitException(9, input);
					throw eee;
				}
				cnt9++;
			}

			// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:75:65: ( conditional_probability )?
			int alt10=2;
			int LA10_0 = input.LA(1);
			if ( (LA10_0==STRING) ) {
				alt10=1;
			}
			switch (alt10) {
				case 1 :
					// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:75:65: conditional_probability
					{
					pushFollow(FOLLOW_conditional_probability_in_conditional_probabilities_list313);
					conditional_probability();
					state._fsp--;
					if (state.failed) return;
					}
					break;

			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "conditional_probabilities_list"



	// $ANTLR start "conditional_probability"
	// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:77:1: conditional_probability : condition ':' probability_number ;
	public final void conditional_probability() throws RecognitionException {
		try {
			// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:77:24: ( condition ':' probability_number )
			// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:77:26: condition ':' probability_number
			{
			pushFollow(FOLLOW_condition_in_conditional_probability322);
			condition();
			state._fsp--;
			if (state.failed) return;
			match(input,17,FOLLOW_17_in_conditional_probability324); if (state.failed) return;
			pushFollow(FOLLOW_probability_number_in_conditional_probability326);
			probability_number();
			state._fsp--;
			if (state.failed) return;
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "conditional_probability"



	// $ANTLR start "condition"
	// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:79:1: condition : STRING '|' STRING ;
	public final void condition() throws RecognitionException {
		try {
			// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:79:10: ( STRING '|' STRING )
			// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:79:12: STRING '|' STRING
			{
			match(input,STRING,FOLLOW_STRING_in_condition334); if (state.failed) return;
			match(input,22,FOLLOW_22_in_condition336); if (state.failed) return;
			match(input,STRING,FOLLOW_STRING_in_condition338); if (state.failed) return;
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "condition"



	// $ANTLR start "probability_number"
	// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:80:1: probability_number : ( INT | FLOAT );
	public final void probability_number() throws RecognitionException {
		try {
			// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:80:20: ( INT | FLOAT )
			// /Users/yoshiaki/NetBeansProjects/ToPS_Parser/ToPS.g:
			{
			if ( input.LA(1)==FLOAT||input.LA(1)==INT ) {
				input.consume();
				state.errorRecovery=false;
				state.failed=false;
			}
			else {
				if (state.backtracking>0) {state.failed=true; return;}
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "probability_number"


